# swri_console

./: CMakeLists.txt  manifest.xml
include/swri_console/: console_window.h  log_database_proxy_model.h
src/: console_window.cpp  log_database_proxy_model.cpp
ui/: console_window.ui
